Set PRMatrixSparseIndirect to false, move validation groups to yml

--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -453,6 +453,8 @@ jobs:
           - ${{ config }}
       ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
         EnablePRGeneration: true
+        # We want full matrix for indirect packages
+        PRMatrixSparseIndirect: false
         SparseCheckoutPaths:
           - '**/*.xml'
           - '**/*.md'
