--- a/eng/pipelines/templates/stages/archetype-sdk-tests.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tests.yml
@@ -107,6 +107,9 @@ parameters:
   - name: PersistOidcToken
     type: boolean
     default: false
+  - name: PreTestRunSteps
+    type: object
+    default: [ ]
 
 extends:
   template: /eng/pipelines/templates/stages/1es-redirect.yml
