--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -9,8 +9,22 @@ extends:
     PreTestRunSteps:
       - script: echo "Running pre-test steps"
         displayName: "Pre-Test Step 1"
-      - script: echo "Another pre-test step"
-        displayName: "Pre-Test Step 2"
+      - script: |
+          java -version
+          echo "Java version above"
+          
+          ls -la
+          echo "Current directory contents"
+          
+          if ! java -version 2>&1 | grep -q "1.8"; then
+            echo "Java 8 is not installed. Installing Java 8..."
+            sudo apt-get update
+            sudo apt-get install -y openjdk-8-jdk
+          fi
+          echo "Setting JAVA_HOME to Java 8"
+#          export JAVA_HOME=/path/to/java8
+#          export PATH=$JAVA_HOME/bin:$PATH
+        displayName: "Set JAVA_HOME to Java 8"
     Artifacts:
       - name: azure-ai-openai
         groupId: com.azure
