--- a/eng/pipelines/templates/steps/gpg-sign-and-flatten.yml
+++ b/eng/pipelines/templates/steps/gpg-sign-and-flatten.yml
@@ -30,6 +30,6 @@ steps:
       workingDirectory: $(Agent.BuildDirectory)
       filePath: ${{ parameters.JavaRepoRoot }}/eng/scripts/Flatten-MavenPackageFolder.ps1
       arguments: >
-        -OutputDirectory ${{ parameters.OutputDirectory }}
+        -SignedDirectory ${{ parameters.OutputDirectory }}
         -FlattenedDirectory ${{ parameters.FlattenedESRPDirectory }}
         -InformationAction Continue
