--- a/sdk/clientcore/annotation-processor-test/pom.xml
+++ b/sdk/clientcore/annotation-processor-test/pom.xml
@@ -55,21 +55,21 @@
     <dependency>
       <groupId>io.clientcore</groupId>
       <artifactId>core</artifactId>
-      <version>1.0.0-beta.5</version> <!-- {x-version-update;unreleased_io.clientcore:core;dependency} -->
+      <version>1.0.0-beta.6</version> <!-- {x-version-update;unreleased_io.clientcore:core;dependency} -->
     </dependency>
 
     <!-- Test dependencies -->
     <dependency>
       <groupId>io.clientcore</groupId>
       <artifactId>core</artifactId>
-      <version>1.0.0-beta.4</version> <!-- {x-version-update;unreleased_io.clientcore:core;dependency} -->
+      <version>1.0.0-beta.6</version> <!-- {x-version-update;unreleased_io.clientcore:core;dependency} -->
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.clientcore</groupId>
       <artifactId>http-okhttp3</artifactId>
-      <version>1.0.0-beta.1</version> <!-- {x-version-update;unreleased_io.clientcore:http-okhttp3;dependency} -->
+      <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:http-okhttp3;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
