--- a/sdk/clientcore/core/pom.xml
+++ b/sdk/clientcore/core/pom.xml
@@ -41,24 +41,23 @@
     <jacoco.min.branchcoverage>0.50</jacoco.min.branchcoverage>
 
     <javaModulesSurefireArgLine>
-      --add-opens io.clientcore.core/io.clientcore.core.annotation=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.credential=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.annotations=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.credentials=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.http=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.http.annotation=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.http.annotations=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.http.client=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.http.exception=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.http.exceptions=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.http.models=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.http.pipeline=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.implementation=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.implementation.http=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.implementation.http.rest=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.implementation.util=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.implementation.utils=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.models=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.shared=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.util=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.util.configuration=ALL-UNNAMED
-      --add-opens io.clientcore.core/io.clientcore.core.util.serializer=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.utils=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.utils.configuration=ALL-UNNAMED
 
       --add-reads io.clientcore.core=ALL-UNNAMED
 
